--- a/index.html
+++ b/index.html
@@ -178,8 +178,9 @@
           </div>
           <!-- 備註 -->
           <div class="mb-3">
-            <label for="address">備註</label><br>
-            <textarea style="resize:none;width:100%;height:150px;"></textarea>
+            <label for="message">備註</label><br>
+            <textarea id="message" name="message" v-model="form.user.message"
+              style="resize:none;width:100%;height:150px;"></textarea>
           </div>
 
           <div class="text-end">
