--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           <div class="mb-3">
             <label for="message">備註</label><br>
             <textarea id="message" name="message" v-model="form.user.message"
-              style="resize:none;width:100%;height:150px;"></textarea>
+              style="resize:none;width:100%;height:60px;" maxlength="30" placeholder="請輸入備註,最多30個字"></textarea>
           </div>
 
           <div class="text-end">
